finished homepage styling and basic nav

--- a/index.html
+++ b/index.html
@@ -1,50 +1,62 @@
 <!DOCTYPE html>
-<html>
+<html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-  <title>Kathleen Oum</title>
+  <title>Kathleen Oum | Graphic &amp; Motion Design</title>
+  <link rel="icon" type="image/png" href="img/favicon.png">
 
-  <link href="https://fonts.googleapis.com/css?family=Fira+Sans" rel="stylesheet">
-  
-  <link href="normalize.css" rel="stylesheet">
-  <link href="homepage.css" rel="stylesheet">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <link href="https://fonts.googleapis.com/css?family=Fira+Sans:400,500" rel="stylesheet">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
+  <link href="css/normalize.css" rel="stylesheet">
+  <link href="css/main.css" rel="stylesheet">
+  <link href="css/index.css" rel="stylesheet">
+
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js" type="text/javascript"></script>
+  <script src="js/menu.js" type="text/javascript"></script>
 </head>
 <body>
   <div id="header">
     <div id="logo">
       <h1>Kathleen Oum</h1>
-      <h2>Graphic &amp; Motion Designer</h2>
+      <h2>Graphic &amp; Motion Design</h2>
     </div>
     <div id="menu">
-      <span>Protfolio</span>
-      <span>Resume</span>
-      <span>About</span>
-      <span>Contact</span>
+      <div id="menu-hamburger" class="menu-closed">
+        <img src="img/bar_menu.svg" alt="menu">
+      </div>
+      <div id="menu-links">
+        <span><a class="active-link" href="index.html">Portfolio</a></span>
+        <span><a href="resume.html">Resume</a></span>
+        <span><a href="about.html">About</a></span>
+        <span><a href="contact.html">Contact</a></span>
+      </div>
     </div>
   </div>
 
   <div id="content">
     <div class="item">
-      <img src="">
+      <div class="placeholder"><img src="https://media.giphy.com/media/329CARb6nxwlq5WnPh/giphy.gif" alt="animation demo reel"></div>
       <span>Animation Demo Reel</span>
     </div>
     <div class="item">
-      <img src="">
+      <div class="placeholder"><img src="https://media.giphy.com/media/329CARb6nxwlq5WnPh/giphy.gif" alt="vector art"></div>
       <span>Vector Art</span>
     </div>
     <div class="item">
-      <img src="">
+      <div class="placeholder"><img src="https://media.giphy.com/media/329CARb6nxwlq5WnPh/giphy.gif" alt="YouTube gaming intros"></div>
       <span>YouTube Gaming Intros</span>
     </div>
     <div class="item">
-      <img src="">
+      <div class="placeholder"><img src="https://media.giphy.com/media/329CARb6nxwlq5WnPh/giphy.gif" alt="IGN God of War campaign"></div>
       <span>IGN - God of War Campaign</span>
     </div>
     <div class="item">
-      <img src="">
+      <div class="placeholder"><img src="https://media.giphy.com/media/329CARb6nxwlq5WnPh/giphy.gif" alt="motion manga and art"></div>
       <span>Motion Manga / Art</span>
     </div>
     <div class="item">
-      <img src="">
+      <div class="placeholder"><img src="https://media.giphy.com/media/329CARb6nxwlq5WnPh/giphy.gif" alt="IGN Live at E3 booth monitors"></div>
       <span>IGN LIVE at E3 - Booth Monitors</span>
     </div>
   </div>
