added about page

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body>
   <div id="header">
     <div id="logo">
-      <h1>Kathleen Oum</h1>
+      <a href="index.html"><h1>Kathleen Oum</h1></a>
       <h2>Graphic &amp; Motion Design</h2>
     </div>
     <div id="menu">
@@ -27,7 +27,7 @@
       </div>
       <div id="menu-links">
         <span><a class="active-link" href="index.html">Portfolio</a></span>
-        <span><a href="resume.html">Resume</a></span>
+        <span><a target="_blank" href="https://puu.sh/B1NS6.pdf">Resume</a></span>
         <span><a href="about.html">About</a></span>
         <span><a href="contact.html">Contact</a></span>
       </div>
@@ -35,30 +35,46 @@
   </div>
 
   <div id="content">
+    <!-- Row 1 -->
     <div class="item">
-      <div class="placeholder"><img src="https://media.giphy.com/media/329CARb6nxwlq5WnPh/giphy.gif" alt="animation demo reel"></div>
-      <span>Animation Demo Reel</span>
+      <a href="#">
+        <div class="image-container"><img src="https://media.giphy.com/media/329CARb6nxwlq5WnPh/giphy.gif" alt="animation demo reel"></div>
+        <span>Animation Demo Reel</span>
+      </a>
     </div>
     <div class="item">
-      <div class="placeholder"><img src="https://media.giphy.com/media/329CARb6nxwlq5WnPh/giphy.gif" alt="vector art"></div>
-      <span>Vector Art</span>
+      <a href="#">
+        <div class="image-container"><img src="https://media.giphy.com/media/329CARb6nxwlq5WnPh/giphy.gif" alt="vector art"></div>
+        <span>Vector Art</span>
+      </a>
     </div>
     <div class="item">
-      <div class="placeholder"><img src="https://media.giphy.com/media/329CARb6nxwlq5WnPh/giphy.gif" alt="YouTube gaming intros"></div>
-      <span>YouTube Gaming Intros</span>
+      <a href="#">
+        <div class="image-container"><img src="https://media.giphy.com/media/329CARb6nxwlq5WnPh/giphy.gif" alt="YouTube gaming intros"></div>
+        <span>YouTube Gaming Intros</span>
+      </a>
+    </div>
+    <!-- Row 2 -->
+    <div class="item">
+      <a href="#">
+        <div class="image-container"><img src="https://media.giphy.com/media/329CARb6nxwlq5WnPh/giphy.gif" alt="IGN God of War campaign"></div>
+        <span>IGN - God of War Campaign</span>
+      </a>
     </div>
     <div class="item">
-      <div class="placeholder"><img src="https://media.giphy.com/media/329CARb6nxwlq5WnPh/giphy.gif" alt="IGN God of War campaign"></div>
-      <span>IGN - God of War Campaign</span>
+      <a href="#">
+        <div class="image-container"><img src="https://media.giphy.com/media/329CARb6nxwlq5WnPh/giphy.gif" alt="motion manga and art"></div>
+        <span>Motion Manga / Art</span>
+      </a>
     </div>
     <div class="item">
-      <div class="placeholder"><img src="https://media.giphy.com/media/329CARb6nxwlq5WnPh/giphy.gif" alt="motion manga and art"></div>
-      <span>Motion Manga / Art</span>
+      <a href="#">
+        <div class="image-container"><img src="https://media.giphy.com/media/329CARb6nxwlq5WnPh/giphy.gif" alt="IGN Live at E3 booth monitors"></div>
+        <span>IGN LIVE at E3 - Booth Monitors</span>
+      </a>
     </div>
-    <div class="item">
-      <div class="placeholder"><img src="https://media.giphy.com/media/329CARb6nxwlq5WnPh/giphy.gif" alt="IGN Live at E3 booth monitors"></div>
-      <span>IGN LIVE at E3 - Booth Monitors</span>
-    </div>
+
   </div>
+
 </body>
 </html>
