add meta tagging

--- a/about.html
+++ b/about.html
@@ -2,9 +2,23 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
   <title>Kathleen Oum | Graphic &amp; Motion Design</title>
-  <link rel="icon" type="image/png" href="img/favicon.png">
+  <meta name="description" content="Design and Animation Portfolio">
+  <meta name="author" content="Kathleen Oum">
+
+  <!-- Facebook Open Graph -->
+  <meta property="og:title" content="Kathleen Oum | Graphic &amp; Motion Design">
+  <meta property="og:description" content="Design and Animation Portfolio">
+  <meta property="og:image" content="img/embed.png">
+  <meta property="og:url" content="http://koum.asligar.com">
+
+  <!-- Twitter -->
+  <meta name="twitter:title" content="Kathleen Oum | Graphic &amp; Motion Design">
+  <meta name="twitter:description" content="Design and Animation Portfolio">
+  <meta name="twitter:image" content=" img/embed.png">
+  <meta name="twitter:card" content="summary_large_image">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="icon" type="image/png" href="img/favicon.png">
 
   <link href="https://fonts.googleapis.com/css?family=Fira+Sans:400,500" rel="stylesheet">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
