--- a/index.html
+++ b/index.html
@@ -2,9 +2,23 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
   <title>Kathleen Oum | Graphic &amp; Motion Design</title>
-  <link rel="icon" type="image/png" href="img/favicon.png">
+  <meta name="description" content="Design and Animation Portfolio">
+  <meta name="author" content="Kathleen Oum">
+
+  <!-- Facebook Open Graph -->
+  <meta property="og:title" content="Kathleen Oum | Graphic &amp; Motion Design">
+  <meta property="og:description" content="Design and Animation Portfolio">
+  <meta property="og:image" content="img/embed.png">
+  <meta property="og:url" content="http://koum.asligar.com">
+
+  <!-- Twitter -->
+  <meta name="twitter:title" content="Kathleen Oum | Graphic &amp; Motion Design">
+  <meta name="twitter:description" content="Design and Animation Portfolio">
+  <meta name="twitter:image" content=" img/embed.png">
+  <meta name="twitter:card" content="summary_large_image">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="icon" type="image/png" href="img/favicon.png">
 
   <link href="https://fonts.googleapis.com/css?family=Fira+Sans:400,500" rel="stylesheet">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
@@ -38,32 +52,32 @@
     <!-- Row 1 -->
     <div class="item">
       <a href="#">
-        <div class="image-container"><img src="https://media.giphy.com/media/329CARb6nxwlq5WnPh/giphy.gif" alt="animation demo reel"></div>
+        <div class="image-container"><img src="https://78.media.tumblr.com/8464645b1e64c208fe53bcc3c66c6b85/tumblr_p3wnomIArf1vihf3to1_r2_540.gif" alt="animation demo reel"></div>
         <span>Animation Demo Reel</span>
       </a>
     </div>
     <div class="item">
       <a href="#">
-        <div class="image-container"><img src="https://media.giphy.com/media/329CARb6nxwlq5WnPh/giphy.gif" alt="vector art"></div>
+        <div class="image-container"><img src="https://78.media.tumblr.com/1bbacdd1b6fecbd49db7773dcd723d67/tumblr_ouwkbiXZMx1vihf3to1_540.gif" alt="vector art"></div>
         <span>Vector Art</span>
       </a>
     </div>
     <div class="item">
       <a href="#">
-        <div class="image-container"><img src="https://media.giphy.com/media/329CARb6nxwlq5WnPh/giphy.gif" alt="YouTube gaming intros"></div>
+        <div class="image-container"><img src="https://78.media.tumblr.com/003cb15849b1d7fe8764467e424a9c25/tumblr_ouwn0m07ug1vihf3to1_r1_540.gif" alt="YouTube gaming intros"></div>
         <span>YouTube Gaming Intros</span>
       </a>
     </div>
     <!-- Row 2 -->
     <div class="item">
       <a href="#">
-        <div class="image-container"><img src="https://media.giphy.com/media/329CARb6nxwlq5WnPh/giphy.gif" alt="IGN God of War campaign"></div>
+        <div class="image-container"><img src="https://78.media.tumblr.com/4e83c08c6e61730b19561c7695e6dcdd/tumblr_ouwn6mONOf1vihf3to1_540.gif" alt="IGN God of War campaign"></div>
         <span>IGN - God of War Campaign</span>
       </a>
     </div>
     <div class="item">
       <a href="#">
-        <div class="image-container"><img src="https://media.giphy.com/media/329CARb6nxwlq5WnPh/giphy.gif" alt="motion manga and art"></div>
+        <div class="image-container"><img src="https://media.giphy.com/media/d1E2pMuuM6zJ0CuQ/source.gif" alt="motion manga and art"></div>
         <span>Motion Manga / Art</span>
       </a>
     </div>
