--- a/contact.html
+++ b/contact.html
@@ -49,6 +49,42 @@
   </div>
 
   <div id="content">
+    <div id="info-section">
+      <div id="contact-banner">
+        <img src="img/contact.png">
+      </div>
+      <div>
+        <h2>Wanna Chat?</h2>
+        <p>Feel free to e-mail me at <a class="active-link" href="mailto:kaeveeoh@gmail.com">kaeveeoh@gmail.com</a> or message me through my social media.</p>
+      </div>
+      <div>
+        <h2>Connect</h2>
+        <div>
+          <img src="img/twitter.svg" alt="twitter">
+          <h3>Twitter:</h3>
+          <span>kaeveeoh</span>
+        </div>
+        <div>
+          <img src="img/tumblr.svg" alt="tumblr">
+          <h3>Tumblr:</h3>
+          <span>kaeveeoh-art</span>
+        </div>
+        <div>
+          <img src="img/dribbble.svg" alt="dribbble">
+          <h3>Dribbble:</h3>
+          <span>kaeveeoh</span>
+        </div>
+      </div>
+    </div>
+    <div id="form-section">
+      <form id="contact-form">
+        <input type="text" name="name" id="input-name" placeholder="Name" required/>
+        <input type="email" name="email" id="input-email" placeholder="E-mail" required/>
+        <input type="text" name="subject" id="input-subject" placeholder="Subject" required/>
+        <textarea id="input-message" placeholder="Message..."></textarea>
+        <input type="submit" value="Submit"/>
+      </form>
+    </div>
   </div>
 
 </body>
