--- a/about.html
+++ b/about.html
@@ -32,7 +32,7 @@
 <body>
   <div id="header">
     <div id="logo">
-      <a href="index.html"><h1>Kathleen Oum</h1></a>
+      <h1><a href="index.html">Kathleen Oum</a></h1>
       <h2>Graphic &amp; Motion Design</h2>
     </div>
     <div id="menu">
