--- a/contact.html
+++ b/contact.html
@@ -32,7 +32,7 @@
 <body>
   <div id="header">
     <div id="logo">
-      <a href="index.html"><h1>Kathleen Oum</h1></a>
+      <h1><a href="index.html">Kathleen Oum</a></h1>
       <h2>Graphic &amp; Motion Design</h2>
     </div>
     <div id="menu">
@@ -53,36 +53,42 @@
       <div id="contact-banner">
         <img src="img/contact.png">
       </div>
-      <div>
+      <div id="contact-intro">
         <h2>Wanna Chat?</h2>
-        <p>Feel free to e-mail me at <a class="active-link" href="mailto:kaeveeoh@gmail.com">kaeveeoh@gmail.com</a> or message me through my social media.</p>
+        <p>Feel free to fill out the contact form, e-mail me at <a class="active-link" href="mailto:kaeveeoh@gmail.com">kaeveeoh@gmail.com</a>, or message me through my social media.</p>
       </div>
-      <div>
+      <div id="contact-social">
         <h2>Connect</h2>
-        <div>
-          <img src="img/twitter.svg" alt="twitter">
-          <h3>Twitter:</h3>
-          <span>kaeveeoh</span>
+        <div class="social-account">
+          <a target="_blank" href="https://twitter.com/kaeveeoh">
+            <img class="social-icon" src="img/twitter.svg" alt="twitter">
+            <h3>Twitter:</h3>
+            <span>kaeveeoh</span>
+          </a>
         </div>
-        <div>
-          <img src="img/tumblr.svg" alt="tumblr">
-          <h3>Tumblr:</h3>
-          <span>kaeveeoh-art</span>
+        <div class="social-account">
+          <a target="_blank" href="http://kaeveeoh-art.tumblr.com/">
+            <img class="social-icon" src="img/tumblr.svg" alt="tumblr">
+            <h3>Tumblr:</h3>
+            <span>kaeveeoh-art</span>
+          </a>
         </div>
-        <div>
-          <img src="img/dribbble.svg" alt="dribbble">
-          <h3>Dribbble:</h3>
-          <span>kaeveeoh</span>
+        <div class="social-account">
+          <a target="_blank" href="https://dribbble.com/kaeveeoh">
+            <img class="social-icon" src="img/dribbble.svg" alt="dribbble">
+            <h3>Dribbble:</h3>
+            <span>kaeveeoh</span>
+          </a>
         </div>
       </div>
     </div>
     <div id="form-section">
-      <form id="contact-form">
-        <input type="text" name="name" id="input-name" placeholder="Name" required/>
-        <input type="email" name="email" id="input-email" placeholder="E-mail" required/>
-        <input type="text" name="subject" id="input-subject" placeholder="Subject" required/>
-        <textarea id="input-message" placeholder="Message..."></textarea>
-        <input type="submit" value="Submit"/>
+      <form id="contact-form" action="https://docs.google.com/forms/d/e/1FAIpQLSePzu0CYeHkR8F2jm070_l8MkYaYeftJblVJqS9CljrkiKqSQ/formResponse" target="_self" method="POST" id="mG61Hd">
+        <input type="text" id="input-name" name="entry.2005620554" placeholder="Name" required/>
+        <input type="email" id="input-email" name="emailAddress" placeholder="E-mail" required/>
+        <input type="text" id="input-subject" name="entry.1065046570" placeholder="Subject" required/>
+        <textarea id="input-message" name="entry.1166974658" placeholder="Message..."></textarea>
+        <input id="submit-button" type="submit" value="Send"/>
       </form>
     </div>
   </div>
