--- a/vector.html
+++ b/vector.html
@@ -24,7 +24,7 @@
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
   <link href="css/normalize.css" rel="stylesheet">
   <link href="css/main.css" rel="stylesheet">
-  <link href="css/index.css" rel="stylesheet">
+  <link href="css/art-page.css" rel="stylesheet">
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js" type="text/javascript"></script>
   <script src="js/menu.js" type="text/javascript"></script>
@@ -40,7 +40,7 @@
         <img src="img/bar_menu.svg" alt="menu">
       </div>
       <div id="menu-links">
-        <span><a class="active-link" href="index.html">Portfolio</a></span>
+        <span><a href="index.html">Portfolio</a></span>
         <span><a target="_blank" href="https://puu.sh/B1NS6.pdf">Resume</a></span>
         <span><a href="about.html">About</a></span>
         <span><a href="contact.html">Contact</a></span>
@@ -49,45 +49,42 @@
   </div>
 
   <div id="content">
-    <!-- Row 1 -->
-    <div class="item">
-      <a href="#">
-        <div class="image-container"><img src="https://78.media.tumblr.com/8464645b1e64c208fe53bcc3c66c6b85/tumblr_p3wnomIArf1vihf3to1_r2_540.gif" alt="animation demo reel"></div>
-        <span>Animation Demo Reel</span>
-      </a>
+    <div class="art-section">
+      <div class="art-header">
+        <h2>Page Header</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+      </div>
+      <div class="art-display">
+        <div class="full-image"><img></div>
+        <div class="half-image"><img></div>
+        <div class="half-image"><img></div>
+        <div class="full-image"><img></div>
+        <div class="half-image"><img></div>
+        <div class="half-image"><img></div>
+        <div class="half-image"><img></div>
+        <div class="full-image"><img></div>
+        <div class="half-image"><img></div>
+      </div>
+      <hr>
     </div>
-    <div class="item">
-      <a href="vector.html">
-        <div class="image-container"><img src="https://78.media.tumblr.com/1bbacdd1b6fecbd49db7773dcd723d67/tumblr_ouwkbiXZMx1vihf3to1_540.gif" alt="vector art"></div>
-        <span>Vector Art</span>
-      </a>
+    <div class="art-section">
+      <div class="art-header">
+        <h2>Page Header</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+      </div>
+      <div class="art-display">
+        <div class="full-image"><img></div>
+        <div class="half-image"><img></div>
+        <div class="half-image"><img></div>
+        <div class="full-image"><img></div>
+        <div class="half-image"><img></div>
+        <div class="half-image"><img></div>
+        <div class="half-image"><img></div>
+        <div class="full-image"><img></div>
+        <div class="half-image"><img></div>
+      </div>
+      <hr>
     </div>
-    <div class="item">
-      <a href="#">
-        <div class="image-container"><img src="https://78.media.tumblr.com/003cb15849b1d7fe8764467e424a9c25/tumblr_ouwn0m07ug1vihf3to1_r1_540.gif" alt="YouTube gaming intros"></div>
-        <span>YouTube Gaming Intros</span>
-      </a>
-    </div>
-    <!-- Row 2 -->
-    <div class="item">
-      <a href="#">
-        <div class="image-container"><img src="https://78.media.tumblr.com/4e83c08c6e61730b19561c7695e6dcdd/tumblr_ouwn6mONOf1vihf3to1_540.gif" alt="IGN God of War campaign"></div>
-        <span>IGN - God of War Campaign</span>
-      </a>
-    </div>
-    <div class="item">
-      <a href="#">
-        <div class="image-container"><img src="https://media.giphy.com/media/d1E2pMuuM6zJ0CuQ/source.gif" alt="motion manga and art"></div>
-        <span>Motion Manga / Art</span>
-      </a>
-    </div>
-    <div class="item">
-      <a href="#">
-        <div class="image-container"><img src="https://media.giphy.com/media/329CARb6nxwlq5WnPh/giphy.gif" alt="IGN Live at E3 booth monitors"></div>
-        <span>IGN LIVE at E3 - Booth Monitors</span>
-      </a>
-    </div>
-
   </div>
 
 </body>
