--- a/contact.html
+++ b/contact.html
@@ -55,30 +55,35 @@
       </div>
       <div id="contact-intro">
         <h2>Wanna Chat?</h2>
-        <p>Feel free to fill out the contact form, e-mail me at <a class="active-link" href="mailto:kaeveeoh@gmail.com">kaeveeoh@gmail.com</a>, or message me through my social media.</p>
+        <p>Feel free to fill out the contact form, e-mail me at <a class="active-link" href="mailto:kathleeon.oum@gmail.com">kathleeon.oum@gmail.com</a>, or message me through my social media.</p>
       </div>
       <div id="contact-social">
         <h2>Connect</h2>
-        <div class="social-account">
-          <a target="_blank" href="https://twitter.com/kaeveeoh">
-            <img class="social-icon" src="img/twitter.svg" alt="twitter">
-            <h3>Twitter:</h3>
-            <span>kaeveeoh</span>
-          </a>
-        </div>
-        <div class="social-account">
-          <a target="_blank" href="http://kaeveeoh-art.tumblr.com/">
-            <img class="social-icon" src="img/tumblr.svg" alt="tumblr">
-            <h3>Tumblr:</h3>
-            <span>kaeveeoh-art</span>
-          </a>
-        </div>
-        <div class="social-account">
-          <a target="_blank" href="https://dribbble.com/kaeveeoh">
-            <img class="social-icon" src="img/dribbble.svg" alt="dribbble">
-            <h3>Dribbble:</h3>
-            <span>kaeveeoh</span>
-          </a>
+        <div>
+          <div class="social-account">
+            <a target="_blank" href="https://twitter.com/kaeveeoh">
+              <img class="social-icon" src="img/twitter.svg" alt="twitter">
+              <h3>Twitter</h3>
+            </a>
+          </div>
+          <div class="social-account">
+            <a target="_blank" href="http://kaeveeoh-art.tumblr.com/">
+              <img class="social-icon tumblr-icon" src="img/tumblr.svg" alt="tumblr">
+              <h3>Tumblr</h3>
+            </a>
+          </div>
+          <div class="social-account">
+            <a target="_blank" href="https://dribbble.com/kaeveeoh">
+              <img class="social-icon" src="img/dribbble.svg" alt="dribbble">
+              <h3>Dribbble</h3>
+            </a>
+          </div>
+          <div class="social-account">
+            <a target="_blank" href="https://www.linkedin.com/in/kathleen-oum/">
+              <img class="social-icon" src="img/linkedin.svg" alt="dribbble">
+              <h3>LinkedIn</h3>
+            </a>
+          </div>
         </div>
       </div>
     </div>
