add loading icon

--- a/index.html
+++ b/index.html
@@ -52,38 +52,38 @@
     <!-- Row 1 -->
     <div class="item">
       <a href="#">
-        <div class="image-container"><img src="https://78.media.tumblr.com/8464645b1e64c208fe53bcc3c66c6b85/tumblr_p3wnomIArf1vihf3to1_r2_540.gif" alt="animation demo reel"></div>
+        <div class="image-container loading-icon"><img src="https://78.media.tumblr.com/8464645b1e64c208fe53bcc3c66c6b85/tumblr_p3wnomIArf1vihf3to1_r2_540.gif" alt="animation demo reel"></div>
         <span>Animation Demo Reel</span>
       </a>
     </div>
     <div class="item">
       <a href="vector.html">
-        <div class="image-container"><img src="https://78.media.tumblr.com/1bbacdd1b6fecbd49db7773dcd723d67/tumblr_ouwkbiXZMx1vihf3to1_540.gif" alt="vector art"></div>
+        <div class="image-container loading-icon"><img src="https://78.media.tumblr.com/1bbacdd1b6fecbd49db7773dcd723d67/tumblr_ouwkbiXZMx1vihf3to1_540.gif" alt="vector art"></div>
         <span>Vector Art</span>
       </a>
     </div>
     <div class="item">
       <a href="#">
-        <div class="image-container"><img src="https://78.media.tumblr.com/003cb15849b1d7fe8764467e424a9c25/tumblr_ouwn0m07ug1vihf3to1_r1_540.gif" alt="YouTube gaming intros"></div>
+        <div class="image-container loading-icon"><img src="https://78.media.tumblr.com/003cb15849b1d7fe8764467e424a9c25/tumblr_ouwn0m07ug1vihf3to1_r1_540.gif" alt="YouTube gaming intros"></div>
         <span>YouTube Gaming Intros</span>
       </a>
     </div>
     <!-- Row 2 -->
     <div class="item">
       <a href="#">
-        <div class="image-container"><img src="https://78.media.tumblr.com/4e83c08c6e61730b19561c7695e6dcdd/tumblr_ouwn6mONOf1vihf3to1_540.gif" alt="IGN God of War campaign"></div>
+        <div class="image-container loading-icon"><img src="https://78.media.tumblr.com/4e83c08c6e61730b19561c7695e6dcdd/tumblr_ouwn6mONOf1vihf3to1_540.gif" alt="IGN God of War campaign"></div>
         <span>IGN - God of War Campaign</span>
       </a>
     </div>
     <div class="item">
       <a href="#">
-        <div class="image-container"><img src="https://media.giphy.com/media/d1E2pMuuM6zJ0CuQ/source.gif" alt="motion manga and art"></div>
+        <div class="image-container loading-icon"><img src="https://media.giphy.com/media/d1E2pMuuM6zJ0CuQ/source.gif" alt="motion manga and art"></div>
         <span>Motion Manga / Art</span>
       </a>
     </div>
     <div class="item">
       <a href="#">
-        <div class="image-container"><img src="https://media.giphy.com/media/329CARb6nxwlq5WnPh/giphy.gif" alt="IGN Live at E3 booth monitors"></div>
+        <div class="image-container loading-icon"><img src="https://media.giphy.com/media/329CARb6nxwlq5WnPh/giphy.gif" alt="IGN Live at E3 booth monitors"></div>
         <span>IGN LIVE at E3 - Booth Monitors</span>
       </a>
     </div>
