--- a/vector.html
+++ b/vector.html
@@ -55,15 +55,15 @@
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
       </div>
       <div class="art-display">
-        <div class="full-image"><img></div>
-        <div class="half-image"><img></div>
-        <div class="half-image"><img></div>
-        <div class="full-image"><img></div>
-        <div class="half-image"><img></div>
-        <div class="half-image"><img></div>
-        <div class="half-image"><img></div>
-        <div class="full-image"><img></div>
-        <div class="half-image"><img></div>
+        <div class="full-image loading-icon"><img src="https://78.media.tumblr.com/1bbacdd1b6fecbd49db7773dcd723d67/tumblr_ouwkbiXZMx1vihf3to1_540.gif"></div>
+        <div class="half-image loading-icon"><img src="https://78.media.tumblr.com/59035d36ca51981e63b7c1381d46dca2/tumblr_od3b5si7my1tmp8rdo4_r2_250.gif"></div>
+        <div class="half-image loading-icon"><img src="https://78.media.tumblr.com/acae2151224885eba3395e689cb05191/tumblr_od3b5si7my1tmp8rdo2_250.gif"></div>
+        <div class="full-image loading-icon"><img src="https://78.media.tumblr.com/1bbacdd1b6fecbd49db7773dcd723d67/tumblr_ouwkbiXZMx1vihf3to1_540.gif"></div>
+        <div class="half-image loading-icon"><img src="https://78.media.tumblr.com/8bb6867130ed391da28a04fe0e0a6ec8/tumblr_od3b5si7my1tmp8rdo1_r2_250.gif"></div>
+        <div class="half-image loading-icon"><img src="https://78.media.tumblr.com/6a4a7cab2e2d0e2dd6964e52b72cce6c/tumblr_od3b5si7my1tmp8rdo5_r3_250.gif"></div>
+        <div class="half-image loading-icon"><img src="https://78.media.tumblr.com/1bbacdd1b6fecbd49db7773dcd723d67/tumblr_ouwkbiXZMx1vihf3to1_540.gif"></div>
+        <div class="full-image loading-icon"><img src="https://78.media.tumblr.com/1bbacdd1b6fecbd49db7773dcd723d67/tumblr_ouwkbiXZMx1vihf3to1_540.gif"></div>
+        <div class="half-image loading-icon"><img src="https://78.media.tumblr.com/1bbacdd1b6fecbd49db7773dcd723d67/tumblr_ouwkbiXZMx1vihf3to1_540.gif"></div>
       </div>
       <hr>
     </div>
@@ -73,15 +73,15 @@
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
       </div>
       <div class="art-display">
-        <div class="full-image"><img></div>
-        <div class="half-image"><img></div>
-        <div class="half-image"><img></div>
-        <div class="full-image"><img></div>
-        <div class="half-image"><img></div>
-        <div class="half-image"><img></div>
-        <div class="half-image"><img></div>
-        <div class="full-image"><img></div>
-        <div class="half-image"><img></div>
+        <div class="full-image loading-icon"><img></div>
+        <div class="half-image loading-icon"><img></div>
+        <div class="half-image loading-icon"><img></div>
+        <div class="full-image loading-icon"><img></div>
+        <div class="half-image loading-icon"><img></div>
+        <div class="half-image loading-icon"><img></div>
+        <div class="half-image loading-icon"><img></div>
+        <div class="full-image loading-icon"><img></div>
+        <div class="half-image loading-icon"><img></div>
       </div>
       <hr>
     </div>
