--- a/btc.html
+++ b/btc.html
@@ -24,7 +24,7 @@
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
   <link href="css/normalize.css" rel="stylesheet">
   <link href="css/main.css" rel="stylesheet">
-  <link href="css/index.css" rel="stylesheet">
+  <link href="css/art-page.css" rel="stylesheet">
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js" type="text/javascript"></script>
   <script src="js/menu.js" type="text/javascript"></script>
@@ -40,7 +40,7 @@
         <img src="img/bar_menu.svg" alt="menu">
       </div>
       <div id="menu-links">
-        <span><a class="active-link" href="index.html">Portfolio</a></span>
+        <span><a href="index.html">Portfolio</a></span>
         <span><a target="_blank" href="https://puu.sh/B1NS6.pdf">Resume</a></span>
         <span><a href="about.html">About</a></span>
         <span><a href="contact.html">Contact</a></span>
@@ -49,45 +49,43 @@
   </div>
 
   <div id="content">
-    <!-- Row 1 -->
-    <div class="item">
-      <a href="#">
-        <div class="image-container loading-icon"><img src="https://78.media.tumblr.com/8464645b1e64c208fe53bcc3c66c6b85/tumblr_p3wnomIArf1vihf3to1_r2_540.gif" alt="animation demo reel"></div>
-        <span>Animation Demo Reel</span>
-      </a>
+    <!-- Section 1 -->
+    <div class="art-section">
+      <div class="art-header">
+        <h2>Behind the Cosplay</h2>
+        <p>Animated and designed video graphics for IGN's video series centered around cosplaying Iden Versio, the protagonist of Star Wars: Battlefront II.</p>
+        <br>
+        <p><a class="active-link" target="_blank" href="https://www.ign.com/watch/behind-the-cosplay">Watch the series here</a></p>
+      </div>
+      <div class="art-display">
+        <div class="full-image loading-icon">
+          <img src="https://static1.squarespace.com/static/5abd1e517e3c3a8774569b21/t/5af4971e758d467d5607467d/1535649242043/btc_1920px.png?format=750w">
+        </div>
+      </div>
+      <hr>
     </div>
-    <div class="item">
-      <a href="vector.html">
-        <div class="image-container loading-icon"><img src="https://78.media.tumblr.com/1bbacdd1b6fecbd49db7773dcd723d67/tumblr_ouwkbiXZMx1vihf3to1_540.gif" alt="vector art"></div>
-        <span>Vector Art</span>
-      </a>
+    <!-- Section 2 -->
+    <div class="art-section">
+      <div class="art-display">
+        <div class="full-image loading-icon short-p">
+          <p>Logo animation based on the idea of stitching cosplay. Logo/title was designed by Matt Kruse.</p>
+          <img src="https://media.giphy.com/media/mXO6SOzNJxXeDvr5tK/giphy.gif">
+        </div>
+        <div class="full-image loading-icon">
+          <p>Episode title that appears after the logo animation.</p>
+          <img src="https://puu.sh/BmCDC/a965eedcd6.giff">
+        </div>
+        <div class="full-image loading-icon">
+          <p>Animated the co-branded snipe that appears at the bottom of the videos.</p>
+          <img src="https://media.giphy.com/media/xl26PC4pontPsA74Bj/giphy.gif">
+        </div>
+        <div class="full-image loading-icon">
+          <p>Animated lower third video asset that was templatized for Video Team's usage.</p>
+          <img src="https://media.giphy.com/media/2A445aTbLe36Ro7iLF/giphy.gif">
+        </div>
+      </div>
+      <hr>
     </div>
-    <div class="item">
-      <a href="btc.html">
-        <div class="image-container loading-icon"><img src="https://media.giphy.com/media/1lCGm5ucLhyNqLOrz6/giphy.gif" alt="behind the cosplay IGN video series"></div>
-        <span>Behind the Cosplay - IGN Video Series</span>
-      </a>
-    </div>
-    <!-- Row 2 -->
-    <div class="item">
-      <a href="godofwar.html">
-        <div class="image-container loading-icon"><img src="https://media.giphy.com/media/4Zo6tAHQ7mMIsYQJ8F/giphy.gif" alt="IGN God of War campaign"></div>
-        <span>IGN - God of War Campaign</span>
-      </a>
-    </div>
-    <div class="item">
-      <a href="#">
-        <div class="image-container loading-icon"><img src="https://media.giphy.com/media/d1E2pMuuM6zJ0CuQ/source.gif" alt="motion manga and art"></div>
-        <span>Motion Manga / Art</span>
-      </a>
-    </div>
-    <div class="item">
-      <a href="#">
-        <div class="image-container loading-icon"><img src="https://media.giphy.com/media/329CARb6nxwlq5WnPh/giphy.gif" alt="IGN Live at E3 booth monitors"></div>
-        <span>IGN LIVE at E3 - Booth Monitors</span>
-      </a>
-    </div>
-
   </div>
 
 </body>
