--- a/contact.html
+++ b/contact.html
@@ -67,7 +67,7 @@
             </a>
           </div>
           <div class="social-account">
-            <a target="_blank" href="http://kaeveeoh-art.tumblr.com/">
+            <a target="_blank" href="https://kaeveeoh-art.tumblr.com/">
               <img class="social-icon tumblr-icon" src="img/tumblr.svg" alt="tumblr">
               <h3>Tumblr</h3>
             </a>
