--- a/vector.html
+++ b/vector.html
@@ -49,39 +49,80 @@
   </div>
 
   <div id="content">
+    <!-- Section 1 -->
     <div class="art-section">
       <div class="art-header">
-        <h2>Page Header</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+        <h2>Vector Art</h2>
+        <p>Some of the static and animated vector art I have done from 2017 to now.</p>
+        <p>Details and more can be found on my <a class="active-link" target="_blank" href="https://dribbble.com/kaeveeoh">Dribbble page</a>.</p>
       </div>
       <div class="art-display">
-        <div class="full-image loading-icon"><img src="https://78.media.tumblr.com/1bbacdd1b6fecbd49db7773dcd723d67/tumblr_ouwkbiXZMx1vihf3to1_540.gif"></div>
-        <div class="half-image loading-icon"><img src="https://78.media.tumblr.com/59035d36ca51981e63b7c1381d46dca2/tumblr_od3b5si7my1tmp8rdo4_r2_250.gif"></div>
-        <div class="half-image loading-icon"><img src="https://78.media.tumblr.com/acae2151224885eba3395e689cb05191/tumblr_od3b5si7my1tmp8rdo2_250.gif"></div>
-        <div class="full-image loading-icon"><img src="https://78.media.tumblr.com/1bbacdd1b6fecbd49db7773dcd723d67/tumblr_ouwkbiXZMx1vihf3to1_540.gif"></div>
-        <div class="half-image loading-icon"><img src="https://78.media.tumblr.com/8bb6867130ed391da28a04fe0e0a6ec8/tumblr_od3b5si7my1tmp8rdo1_r2_250.gif"></div>
-        <div class="half-image loading-icon"><img src="https://78.media.tumblr.com/6a4a7cab2e2d0e2dd6964e52b72cce6c/tumblr_od3b5si7my1tmp8rdo5_r3_250.gif"></div>
-        <div class="half-image loading-icon"><img src="https://78.media.tumblr.com/1bbacdd1b6fecbd49db7773dcd723d67/tumblr_ouwkbiXZMx1vihf3to1_540.gif"></div>
-        <div class="full-image loading-icon"><img src="https://78.media.tumblr.com/1bbacdd1b6fecbd49db7773dcd723d67/tumblr_ouwkbiXZMx1vihf3to1_540.gif"></div>
-        <div class="half-image loading-icon"><img src="https://78.media.tumblr.com/1bbacdd1b6fecbd49db7773dcd723d67/tumblr_ouwkbiXZMx1vihf3to1_540.gif"></div>
-      </div>
-      <hr>
-    </div>
-    <div class="art-section">
-      <div class="art-header">
-        <h2>Page Header</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-      </div>
-      <div class="art-display">
-        <div class="full-image loading-icon"><img></div>
-        <div class="half-image loading-icon"><img></div>
-        <div class="half-image loading-icon"><img></div>
-        <div class="full-image loading-icon"><img></div>
-        <div class="half-image loading-icon"><img></div>
-        <div class="half-image loading-icon"><img></div>
-        <div class="half-image loading-icon"><img></div>
-        <div class="full-image loading-icon"><img></div>
-        <div class="half-image loading-icon"><img></div>
+        <div class="half-image loading-icon">
+          <img src="https://78.media.tumblr.com/1bbacdd1b6fecbd49db7773dcd723d67/tumblr_ouwkbiXZMx1vihf3to1_540.gif">
+        </div>
+        <div class="half-image loading-icon">
+          <img src="https://78.media.tumblr.com/003cb15849b1d7fe8764467e424a9c25/tumblr_ouwn0m07ug1vihf3to1_r1_540.gif">
+        </div>
+        <div class="half-image loading-icon">
+          <img src="https://cdn.dribbble.com/users/808936/screenshots/3395283/dribbble.gif">
+        </div>
+        <div class="half-image loading-icon">
+          <img src="https://cdn.dribbble.com/users/808936/screenshots/3403951/drib.gif">
+        </div>
+        <div class="half-image loading-icon">
+          <img src="https://78.media.tumblr.com/4e83c08c6e61730b19561c7695e6dcdd/tumblr_ouwn6mONOf1vihf3to1_540.gif">
+        </div>
+        <div class="half-image loading-icon">
+          <img src="https://78.media.tumblr.com/8464645b1e64c208fe53bcc3c66c6b85/tumblr_p3wnomIArf1vihf3to1_r2_540.gif">
+        </div>
+        <div class="half-image loading-icon">
+          <img src="https://cdn.dribbble.com/users/808936/screenshots/4739296/cactus-for-dribbble.gif">
+        </div>
+        <div class="half-image loading-icon">
+          <img src="https://cdn.dribbble.com/users/808936/screenshots/3954017/cat-dribbble.png">
+        </div>
+        <div class="half-image loading-icon">
+          <img src="https://78.media.tumblr.com/0b088b526b4522c2374812a45d4ae56d/tumblr_oopp36hHXk1vihf3to1_r3_540.png">
+        </div>
+        <div class="half-image loading-icon">
+          <img src="https://78.media.tumblr.com/e0ddd0c1824efa39d7d7e677ed8b092c/tumblr_oocol06XpX1vihf3to1_r1_540.png">
+        </div>
+        <div class="half-image loading-icon">
+          <img src="https://cdn.dribbble.com/users/808936/screenshots/3437540/donuts.gif">
+        </div>
+        <div class="half-image loading-icon">
+          <img src="https://cdn.dribbble.com/users/808936/screenshots/3218057/1.gif">
+        </div>
+        <div class="half-image loading-icon">
+          <img src="https://78.media.tumblr.com/1621ff9d09491278c02f8f1b1db8b28a/tumblr_o0vftjMz6J1tmp8rdo1_540.gif">
+        </div>
+        <div class="half-image loading-icon">
+          <img src="https://78.media.tumblr.com/a62889467258824be0f9a5a9dbb34e3d/tumblr_o0vftjMz6J1tmp8rdo2_r1_540.gif">
+        </div>
+        <div class="quarter-image loading-icon">
+          <img src="https://78.media.tumblr.com/59035d36ca51981e63b7c1381d46dca2/tumblr_od3b5si7my1tmp8rdo4_r2_250.gif">
+        </div>
+        <div class="quarter-image loading-icon">
+          <img src="https://78.media.tumblr.com/acae2151224885eba3395e689cb05191/tumblr_od3b5si7my1tmp8rdo2_250.gif">
+        </div>
+        <div class="quarter-image loading-icon">
+          <img src="https://78.media.tumblr.com/8bb6867130ed391da28a04fe0e0a6ec8/tumblr_od3b5si7my1tmp8rdo1_r2_250.gif">
+        </div>
+        <div class="quarter-image loading-icon">
+          <img src="https://78.media.tumblr.com/6a4a7cab2e2d0e2dd6964e52b72cce6c/tumblr_od3b5si7my1tmp8rdo5_r3_250.gif">
+        </div>
+        <div class="half-image loading-icon">
+          <img src="https://cdn.dribbble.com/users/808936/screenshots/3432408/burger-dribbble.png">
+        </div>
+        <div class="half-image loading-icon">
+          <img src="https://cdn.dribbble.com/users/808936/screenshots/3425457/pizza-drib.png">
+        </div>
+        <div class="half-image loading-icon">
+          <img src="https://cdn.dribbble.com/users/808936/screenshots/3447184/fries-dribbble.png">
+        </div>
+        <div class="half-image loading-icon">
+          <img src="https://cdn.dribbble.com/users/808936/screenshots/3445208/ice-cream-dribbble.png">
+        </div>
       </div>
       <hr>
     </div>
