--- a/contact.html
+++ b/contact.html
@@ -41,7 +41,7 @@
       </div>
       <div id="menu-links">
         <span><a href="index.html">Portfolio</a></span>
-        <span><a target="_blank" href="https://puu.sh/B1NS6.pdf">Resume</a></span>
+        <span><a target="_blank" href="https://puu.sh/Btl8B/182ae937c6.pdf">Resume</a></span>
         <span><a href="about.html">About</a></span>
         <span><a class="active-link" href="contact.html">Contact</a></span>
       </div>
