--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
     </div>
     <!-- Row 2 -->
     <div class="item">
-      <a href="godofwar.html">
+      <a href="god-of-war.html">
         <div class="image-container loading-icon"><img src="https://media.giphy.com/media/4Zo6tAHQ7mMIsYQJ8F/giphy.gif" alt="IGN God of War campaign"></div>
         <span>IGN - God of War Campaign</span>
       </a>
@@ -82,9 +82,9 @@
       </a>
     </div>
     <div class="item">
-      <a href="#">
+      <a href="strive-for-five.html">
         <div class="image-container loading-icon"><img src="https://media.giphy.com/media/329CARb6nxwlq5WnPh/giphy.gif" alt="IGN Live at E3 booth monitors"></div>
-        <span>IGN LIVE at E3 - Booth Monitors</span>
+        <span>Strive for Five Challenge</span>
       </a>
     </div>
 
