--- a/index.html
+++ b/index.html
@@ -64,27 +64,46 @@
     </div>
     <div class="item">
       <a href="btc.html">
-        <div class="image-container loading-icon"><img src="https://media.giphy.com/media/1lCGm5ucLhyNqLOrz6/giphy.gif" alt="behind the cosplay IGN video series"></div>
-        <span>Behind the Cosplay - IGN Video Series</span>
+        <div class="image-container loading-icon"><img src="https://media.giphy.com/media/SIuhRluNb4FxmbzctN/giphy.gif" alt="behind the cosplay IGN video series"></div>
+        <span>YouTube Gaming Intro Commissions</span>
       </a>
     </div>
     <!-- Row 2 -->
     <div class="item">
       <a href="god-of-war.html">
-        <div class="image-container loading-icon"><img src="https://media.giphy.com/media/4Zo6tAHQ7mMIsYQJ8F/giphy.gif" alt="IGN God of War campaign"></div>
-        <span>IGN - God of War Campaign</span>
-      </a>
-    </div>
-    <div class="item">
-      <a href="#">
-        <div class="image-container loading-icon"><img src="https://media.giphy.com/media/d1E2pMuuM6zJ0CuQ/source.gif" alt="motion manga and art"></div>
-        <span>Motion Manga / Art</span>
+        <div class="image-container loading-icon"><img src="https://78.media.tumblr.com/7499144b65be14fffcfd2eb4dd928cf3/tumblr_peah1mrEIV1tmp8rdo6_r1_1280.jpg" alt="IGN God of War campaign"></div>
+        <span>Anime Omake - IGN Series</span>
       </a>
     </div>
     <div class="item">
       <a href="strive-for-five.html">
-        <div class="image-container loading-icon"><img src="https://media.giphy.com/media/329CARb6nxwlq5WnPh/giphy.gif" alt="IGN Live at E3 booth monitors"></div>
-        <span>Strive for Five Challenge</span>
+        <div class="image-container loading-icon"><img src="https://media.giphy.com/media/26uf5bAChZqPkTzKE/giphy.gif" alt="motion manga and art"></div>
+        <span>Mock Character Selection Menu</span>
+      </a>
+    </div>
+    <div class="item">
+      <a href="strive-for-five.html">
+        <div class="image-container loading-icon"><img src="https://media.giphy.com/media/3o6Yg8VUijOmdX9It2/source.gif" alt="IGN Live at E3 booth monitors"></div>
+        <span>Daily UI [Web + Mobile]</span>
+      </a>
+    </div>
+     <!-- Row 3 -->
+     <div class="item">
+      <a href="#">
+        <div class="image-container loading-icon"><img src="https://78.media.tumblr.com/8464645b1e64c208fe53bcc3c66c6b85/tumblr_p3wnomIArf1vihf3to1_r2_540.gif" alt="animation demo reel"></div>
+        <span>Animation Demo Reel</span>
+      </a>
+    </div>
+    <div class="item">
+      <a href="vector.html">
+        <div class="image-container loading-icon"><img src="https://78.media.tumblr.com/1bbacdd1b6fecbd49db7773dcd723d67/tumblr_ouwkbiXZMx1vihf3to1_540.gif" alt="vector art"></div>
+        <span>Vector Art</span>
+      </a>
+    </div>
+    <div class="item">
+      <a href="btc.html">
+        <div class="image-container loading-icon"><img src="https://media.giphy.com/media/1lCGm5ucLhyNqLOrz6/giphy.gif" alt="behind the cosplay IGN video series"></div>
+        <span>Behind the Cosplay - IGN Video Series</span>
       </a>
     </div>
 
