--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@
       </a>
     </div>
     <div class="item">
-      <a href="btc.html">
-        <div class="image-container loading-icon"><img src="https://media.giphy.com/media/SIuhRluNb4FxmbzctN/giphy.gif" alt="behind the cosplay IGN video series"></div>
+      <a href="youtube.html">
+        <div class="image-container loading-icon"><img src="https://media.giphy.com/media/SIuhRluNb4FxmbzctN/giphy.gif" alt="youtube commissions"></div>
         <span>YouTube Gaming Intro Commissions</span>
       </a>
     </div>
@@ -83,15 +83,15 @@
     </div>
     <div class="item">
       <a href="strive-for-five.html">
-        <div class="image-container loading-icon"><img src="https://media.giphy.com/media/3o6Yg8VUijOmdX9It2/source.gif" alt="IGN Live at E3 booth monitors"></div>
-        <span>Daily UI [Web + Mobile]</span>
+        <div class="image-container loading-icon"><img src="https://media.giphy.com/media/3o6Yg8VUijOmdX9It2/source.gif" alt="strive for five challenge"></div>
+        <span>Strive for Five Challenge</span>
       </a>
     </div>
      <!-- Row 3 -->
      <div class="item">
-      <a href="#">
-        <div class="image-container loading-icon"><img src="https://78.media.tumblr.com/8464645b1e64c208fe53bcc3c66c6b85/tumblr_p3wnomIArf1vihf3to1_r2_540.gif" alt="animation demo reel"></div>
-        <span>Animation Demo Reel</span>
+      <a href="behind-the-cosplay.html">
+        <div class="image-container loading-icon"><img src="https://78.media.tumblr.com/8464645b1e64c208fe53bcc3c66c6b85/tumblr_p3wnomIArf1vihf3to1_r2_540.gif" alt="behind the cosplay"></div>
+        <span>Behind the Cosplay - IGN Video Series</span>
       </a>
     </div>
     <div class="item">
